[B]2.5.5[/B]
. Fix encoding detection error on Android based systems.

[B]2.5.4[/B]
. Suspend audio regardless of mediastate. Thanks to zzattack.

[B]2.5.3[/B]
. Disable "%rom%" default argument for stand alone launcher.

[B]2.5.2[/B]
. Fix XBMC Gotham compatibility

[B]2.5.1[/B]
. Fix GameFAQs scrapers.
. Fix empty query launcher bug.
. Code cleaning.

[B]2.5.0[/B]
. Add feature to mark categories as finished/unfinished.
. Modify settings to show/hide finished categories/launcher/items.
. Improve launchers.xml file parsing.
. Fix compatibility with launchers.xml files created from 2.0.0 prior versions.

[B]2.4.5[/B]
. Fix default thumbs and fanarts paths for query and favourite launchers.

[B]2.4.4[/B]
. Fix first favourite item list launcher creation bug.

[B]2.4.3[/B]
. Add a new info collecting method : NFO+scraper

[B]2.4.2[/B]
. Fix GameFAQs info scraper.
. Fix GameFAQs gamesystem reference list.

[B]2.4.1[/B]
. Fix ComicVine thumbs scraper.

[B]2.4.0[/B]
. Add favourite launchers creation.

[B]2.3.2[/B]
. Fix thumb and fanart link creation for categories, launchers and items.

[B]2.3.1[/B]
. Fix GameFAQs thumbs and fanarts scrapers.

[B]2.3.0[/B]
. Add a queries launcher creation.
. Fix message display for launchers fanart image change.
. Fix message display for items fanart image change.

[B]2.2.8[/B]
. Fix "Remote Share" Could not connect to network server message display under Windows.

[B]2.2.7[/B]
. Fix ComicVine data scrapers.

[B]2.2.6[/B]
. Fix platform ID change for GameFAQs scrapers.

[B]2.2.5[/B]
. Fix launcher information display

[B]2.2.4[/B]
. Fix Minimize option save.

[B]2.2.3[/B]
. Fix Sega Genesis 32X scrapers references

[B]2.2.2[/B]
. Fix unclosed opened CSV and NFO files.
. Fix negative handle problem.
. Fix TheGameDB cached thumbs images display list.

[B]2.2.1[/B]
. Fix XBMC notification display bugs.

[B]2.2.0[/B]
. Fix XBMC notification icon display.
. Rewrite launchers.xml load/save functions.
. Code cleaning.